--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">applicationrftg</string>
+    <!-- Liste déroulante serveur -->
+    <string-array name="listeURLs">
+        <item>http://10.0.2.2:8180</item>
+        <item>http://rftg.mtb111.com</item>
+    </string-array>
 </resources>
